[package]
name = "ebay-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.24.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8.8"